// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorTranslator shades and tints tests Shades snapshots with HWB functions from "hwb(0 0% 0% / 1)" 1`] = `
[
  "hwb(0 0% 17% / 1)",
  "hwb(0 0% 33% / 1)",
  "hwb(0 0% 50% / 1)",
  "hwb(0 0% 67% / 1)",
  "hwb(0 0% 83% / 1)",
]
`;

exports[`ColorTranslator shades and tints tests Shades snapshots with HWB functions from "hwb(0 0% 0%)" 1`] = `
[
  "hwb(0 0% 17%)",
  "hwb(0 0% 33%)",
  "hwb(0 0% 50%)",
  "hwb(0 0% 67%)",
  "hwb(0 0% 83%)",
]
`;

exports[`ColorTranslator shades and tints tests Shades snapshots with HWB functions from {"H":0,"W":0,"B":0,"A":1} 1`] = `
[
  {
    "A": 1,
    "B": 17,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 33,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 50,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 67,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 83,
    "H": 0,
    "W": 0,
  },
]
`;

exports[`ColorTranslator shades and tints tests Shades snapshots with HWB functions from {"H":0,"W":0,"B":0} 1`] = `
[
  {
    "B": 17,
    "H": 0,
    "W": 0,
  },
  {
    "B": 33,
    "H": 0,
    "W": 0,
  },
  {
    "B": 50,
    "H": 0,
    "W": 0,
  },
  {
    "B": 67,
    "H": 0,
    "W": 0,
  },
  {
    "B": 83,
    "H": 0,
    "W": 0,
  },
]
`;

exports[`ColorTranslator shades and tints tests Shades snapshots with L*a*b functions from "lab(54.2917337686 80.812455318 69.8850403235 / 1)" 1`] = `
[
  "lab(45 70 61 / 1)",
  "lab(36 60 51 / 1)",
  "lab(26 48 39 / 1)",
  "lab(16 36 25 / 1)",
  "lab(5 21 8 / 1)",
]
`;

exports[`ColorTranslator shades and tints tests Shades snapshots with L*a*b functions from "lab(54.2917337686 80.812455318 69.8850403235)" 1`] = `
[
  "lab(45 70 61)",
  "lab(36 60 51)",
  "lab(26 48 39)",
  "lab(16 36 25)",
  "lab(5 21 8)",
]
`;

exports[`ColorTranslator shades and tints tests Shades snapshots with L*a*b functions from {"L":54.2917337686,"a":80.812455318,"b":69.8850403235,"A":1} 1`] = `
[
  {
    "A": 1,
    "L": 45,
    "a": 70,
    "b": 61,
  },
  {
    "A": 1,
    "L": 36,
    "a": 60,
    "b": 51,
  },
  {
    "A": 1,
    "L": 26,
    "a": 48,
    "b": 39,
  },
  {
    "A": 1,
    "L": 16,
    "a": 36,
    "b": 25,
  },
  {
    "A": 1,
    "L": 5,
    "a": 21,
    "b": 8,
  },
]
`;

exports[`ColorTranslator shades and tints tests Shades snapshots with L*a*b functions from {"L":54.2917337686,"a":80.812455318,"b":69.8850403235} 1`] = `
[
  {
    "L": 45,
    "a": 70,
    "b": 61,
  },
  {
    "L": 36,
    "a": 60,
    "b": 51,
  },
  {
    "L": 26,
    "a": 48,
    "b": 39,
  },
  {
    "L": 16,
    "a": 36,
    "b": 25,
  },
  {
    "L": 5,
    "a": 21,
    "b": 8,
  },
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from "hsl(0 100% 50% / 1)" with decimals 1`] = `
[
  "hsl(0 100% 42% / 1)",
  "hsl(0 100% 33% / 1)",
  "hsl(0 100% 25% / 1)",
  "hsl(0 100% 17% / 1)",
  "hsl(0 100% 8% / 1)",
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from "hsl(0 100% 50%)" with decimals 1`] = `
[
  "hsl(0 100% 42%)",
  "hsl(0 100% 33%)",
  "hsl(0 100% 25%)",
  "hsl(0 100% 17%)",
  "hsl(0 100% 8%)",
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from "rgb(255 0 0 / 1)" with decimals 1`] = `
[
  "rgb(213 0 0 / 1)",
  "rgb(170 0 0 / 1)",
  "rgb(128 0 0 / 1)",
  "rgb(85 0 0 / 1)",
  "rgb(43 0 0 / 1)",
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from "rgb(255 0 0)" with decimals 1`] = `
[
  "rgb(213 0 0)",
  "rgb(170 0 0)",
  "rgb(128 0 0)",
  "rgb(85 0 0)",
  "rgb(43 0 0)",
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from {"H":0,"S":100,"L":50,"A":1} with decimals 1`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 42,
    "S": 100,
  },
  {
    "A": 1,
    "H": 0,
    "L": 33,
    "S": 100,
  },
  {
    "A": 1,
    "H": 0,
    "L": 25,
    "S": 100,
  },
  {
    "A": 1,
    "H": 0,
    "L": 17,
    "S": 100,
  },
  {
    "A": 1,
    "H": 0,
    "L": 8,
    "S": 100,
  },
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from {"H":0,"S":100,"L":50} with decimals 1`] = `
[
  {
    "H": 0,
    "L": 42,
    "S": 100,
  },
  {
    "H": 0,
    "L": 33,
    "S": 100,
  },
  {
    "H": 0,
    "L": 25,
    "S": 100,
  },
  {
    "H": 0,
    "L": 17,
    "S": 100,
  },
  {
    "H": 0,
    "L": 8,
    "S": 100,
  },
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from {"R":255,"G":0,"B":0,"A":1} with decimals 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 213,
  },
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 170,
  },
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 128,
  },
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 85,
  },
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 43,
  },
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from {"R":255,"G":0,"B":0} with decimals 1`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 213,
  },
  {
    "B": 0,
    "G": 0,
    "R": 170,
  },
  {
    "B": 0,
    "G": 0,
    "R": 128,
  },
  {
    "B": 0,
    "G": 0,
    "R": 85,
  },
  {
    "B": 0,
    "G": 0,
    "R": 43,
  },
]
`;

exports[`ColorTranslator shades and tints tests Tints snapshots with HWB functions from "hwb(0 0% 0% / 1)" 1`] = `
[
  "hwb(0 17% 0% / 1)",
  "hwb(0 33% 0% / 1)",
  "hwb(0 50% 0% / 1)",
  "hwb(0 67% 0% / 1)",
  "hwb(0 83% 0% / 1)",
]
`;

exports[`ColorTranslator shades and tints tests Tints snapshots with HWB functions from "hwb(0 0% 0%)" 1`] = `
[
  "hwb(0 17% 0%)",
  "hwb(0 33% 0%)",
  "hwb(0 50% 0%)",
  "hwb(0 67% 0%)",
  "hwb(0 83% 0%)",
]
`;

exports[`ColorTranslator shades and tints tests Tints snapshots with HWB functions from {"H":0,"W":0,"B":0,"A":1} 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 17,
  },
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 33,
  },
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 50,
  },
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 67,
  },
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 83,
  },
]
`;

exports[`ColorTranslator shades and tints tests Tints snapshots with HWB functions from {"H":0,"W":0,"B":0} 1`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 17,
  },
  {
    "B": 0,
    "H": 0,
    "W": 33,
  },
  {
    "B": 0,
    "H": 0,
    "W": 50,
  },
  {
    "B": 0,
    "H": 0,
    "W": 67,
  },
  {
    "B": 0,
    "H": 0,
    "W": 83,
  },
]
`;

exports[`ColorTranslator shades and tints tests Tints snapshots with L*a*b functions from "lab(54.2917337686 80.812455318 69.8850403235 / 1)" 1`] = `
[
  "lab(56 76 56 / 1)",
  "lab(61 65 38 / 1)",
  "lab(69 49 24 / 1)",
  "lab(78 32 14 / 1)",
  "lab(89 15 6 / 1)",
]
`;

exports[`ColorTranslator shades and tints tests Tints snapshots with L*a*b functions from "lab(54.2917337686 80.812455318 69.8850403235)" 1`] = `
[
  "lab(56 76 56)",
  "lab(61 65 38)",
  "lab(69 49 24)",
  "lab(78 32 14)",
  "lab(89 15 6)",
]
`;

exports[`ColorTranslator shades and tints tests Tints snapshots with L*a*b functions from {"L":54.2917337686,"a":80.812455318,"b":69.8850403235,"A":1} 1`] = `
[
  {
    "A": 1,
    "L": 56,
    "a": 76,
    "b": 56,
  },
  {
    "A": 1,
    "L": 61,
    "a": 65,
    "b": 38,
  },
  {
    "A": 1,
    "L": 69,
    "a": 49,
    "b": 24,
  },
  {
    "A": 1,
    "L": 78,
    "a": 32,
    "b": 14,
  },
  {
    "A": 1,
    "L": 89,
    "a": 15,
    "b": 6,
  },
]
`;

exports[`ColorTranslator shades and tints tests Tints snapshots with L*a*b functions from {"L":54.2917337686,"a":80.812455318,"b":69.8850403235} 1`] = `
[
  {
    "L": 56,
    "a": 76,
    "b": 56,
  },
  {
    "L": 61,
    "a": 65,
    "b": 38,
  },
  {
    "L": 69,
    "a": 49,
    "b": 24,
  },
  {
    "L": 78,
    "a": 32,
    "b": 14,
  },
  {
    "L": 89,
    "a": 15,
    "b": 6,
  },
]
`;
